# ubuntu-voice

./: README.md  bytecli-remote-asr_1.1.5-local1_amd64.deb  bytecli-remote-asr_1.1.5-local2_amd64.deb  bytecli-remote-asr_1.1.5-local3_amd64.deb  bytecli-remote-asr_1.1.5-local4_amd64.deb  bytecli-remote-asr_1.1.5-local6_amd64.deb  bytecli-remote-asr_1.1.5-local7_amd64.deb  pyproject.toml  setup.py
bytecli/: constants.py
bytecli/data/: bytecli.css  com.bytecli.Service.xml
bytecli/eval/: __init__.py  asr_eval.py
bytecli/i18n/: en.json  zh.json
bytecli/indicator/: history_panel.py  main.py  window.py
bytecli/service/: audio_manager.py  audio_preprocess.py  config_manager.py  dbus_service.py  hotkey_manager.py  main.py  model_switcher.py  recording_fsm.py  transcript_cleanup.py  transcript_validation.py  whisper_engine.py
bytecli/settings/: window.py
bytecli/settings/sections/: device_selection.py  hotkey_config.py  model_selection.py
bytecli/shared/: dbus_client.py
debian/: control  postinst
docs/: acceptance_report.md  home_glm_low_volume_deployment_plan.md  remote_asr_package_usage.md
release-backups/: bytecli-remote-asr_1.1.5-local1_20260605_oomfix.deb  bytecli-remote-asr_1.1.5-local5_20260608_indicator_waveform.deb  bytecli-remote-asr_1.1.6_20260608_dense_wave_idle_dot.deb  bytecli-remote-asr_1.1.6_20260608_indicator_focus_recording.deb  bytecli-remote-asr_1.1.6_20260608_indicator_history_layout.deb  bytecli-remote-asr_1.1.6_20260608_waveform_fix.deb
scripts/: build-deb.sh  build-remote-deb.sh  download-sherpa-onnx-models.sh  install.sh  uninstall.sh
systemd/: bytecli.service
tests/: test_stability.py
