[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bytecli"
version = "1.1.0"
description = "Local voice-to-text dictation tool for Ubuntu/Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ByteCLI Contributors" },
]
keywords = ["voice", "dictation", "whisper", "speech-to-text", "linux", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Accessibility",
]
dependencies = [
    "faster-whisper",
    "openai-whisper",
    "python-xlib",
    "sounddevice",
    "pulsectl",
    "numpy",
    "dbus-python",
    "PyGObject",
]

[project.optional-dependencies]
sensevoice = [
    "funasr-onnx",
]
qwen = [
    "qwen-asr>=0.0.6",
    "Pillow>=10",
]
funasr = [
    "funasr>=1.3.3",
    "torchaudio==2.5.1",
]
eval = [
    "jiwer>=4.0.0",
    "soundfile",
    "webrtcvad",
]
silero = [
    "silero-vad",
]
glm = [
    "transformers",
    "torch",
]

[project.urls]
Homepage = "https://github.com/StriderXOXO/byteCLI"
Repository = "https://github.com/StriderXOXO/byteCLI"
"Bug Tracker" = "https://github.com/StriderXOXO/byteCLI/issues"

[project.scripts]
bytecli-service = "bytecli.service.main:main"
bytecli-indicator = "bytecli.indicator.main:main"
bytecli-settings = "bytecli.settings.main:main"
bytecli-asr-eval = "bytecli.eval.asr_eval:main"

[tool.setuptools.packages.find]
include = ["bytecli*"]

[tool.setuptools.package-data]
bytecli = ["data/*.css", "data/*.xml", "i18n/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
